# test-openmpi-valgrind

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
zscripts/: build-docker-image.bash  docker-build-image.bash  docker-run-test.bash  docker-shell-into.bash  run-intel.bash  run-local-openmpi.bash  run-with-intel-suppressions.bash  run-with-intel.bash  run.bash  shell-into-docker-image.bash
